--- a/views/home.html
+++ b/views/home.html
@@ -39,14 +39,16 @@
     </script>
     <div class="wrapper">
       <div class="row">
-        <nav class="col-2" style="display: flex; flex-direction: column;">
-          <a class="blue" href="/" style="margin-bottom: 1rem;"><i class="fas fa-dove"></i></a>
-          <a href="/" style="margin-bottom: 1rem;"><i class="fas fa-home"></i></a>
-          <a href="/notifications" style="margin-bottom: 1rem;"><i class="fas fa-bell"></i><span id="notificationsBadge"></span></a>
-          <a href="/profile" style="margin-bottom: 1rem;"><i class="fas fa-user"></i></a>
-          <a href="/logout" style="margin-bottom: 1rem;"><i class="fas fa-sign-out-alt"></i></a>
+        <nav class="col-2" style="width: 100%;display: flex; flex-direction: row;">
+        <ul>
+          <li><a class="blue" href="/" style="margin-bottom: 1rem;"><i class="fas fa-dove"></i></a></li>
+          <li><a href="/" style="margin-bottom: 1rem;"><i class="fas fa-home"></i></a></li>
+          <li><a href="/notifications" style="margin-bottom: 1rem;"><i class="fas fa-bell"></i><span id="notificationsBadge"></span></a></li>
+          <li><a href="/profile" style="margin-bottom: 1rem;"><i class="fas fa-user"></i></a></li>
+          <li><a href="/logout" style="margin-bottom: 1rem;"><i class="fas fa-sign-out-alt"></i></a></li>
+        </ul>
         </nav>
-        <div style="width: 100%; max-width: 600px;" class="mainSectionContainer" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+        <div style="width: 75%; max-width: 800px;" class="mainSectionContainer" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
           <div id="titleContainer">
             <div class="headerButton"></div>
           </div>
