--- a/public/css/rules.css
+++ b/public/css/rules.css
@@ -52,7 +52,7 @@
 :root,
 :root body {
   color: var(--gray-dark);
-  background-color: var(--white);
+  background-color: var(--orange);
   font-family: var(--font-family-sans-serif);
   font-size: 1rem;
   font-weight: 400;
@@ -62,7 +62,7 @@
 html, body {
   height: 100%;
   min-height: 100%;
-  background-color: #FFF;
+  background-color: #e97006;
   font-weight: 300;
 }
 
@@ -85,7 +85,7 @@ body {
     line-height: 1.5;
     color: #212529;
     text-align: left;
-    background-color: #fff;
+    background-color: #e97006;
 }
 
 .row {
@@ -204,5 +204,5 @@ input[type="file"] {
 
 .btn-primary:hover,
 .btn-secondary:hover {
-  background-color: #0056b3;
+  background-color: #d6700a;
 }
