--- a/views/postPage.html
+++ b/views/postPage.html
@@ -76,7 +76,7 @@
     </script>
     <div class="wrapper">
     <div class="row">
-    <nav class="col-2"><a class="blue" href="/"><i class="fas fa-dove"></i></a><a href="/"><i class="fas fa-home"></i></a><a href="/notifications"><i class="fas fa-bell"></i><span id="notificationsBadge"></span></a><a href="/profile"><i class="fas fa-user"></i></a><a href="/logout"><i class="fas fa-sign-out-alt"></i></a></nav>
+    <nav class="col-2"><a class="blue" href="/"><i class="fas fa-horse"></i></a><a href="/"><i class="fas fa-home"></i></a><a href="/notifications"><i class="fas fa-bell"></i><span id="notificationsBadge"></span></a><a href="/profile"><i class="fas fa-user"></i></a><a href="/logout"><i class="fas fa-sign-out-alt"></i></a></nav>
     <div class="mainSectionContainer col-10 col-md-8 col-lg-6">
       <div id="titleContainer">
         <div class="headerButton"></div>
