--- a/views/profilePage.html
+++ b/views/profilePage.html
@@ -172,7 +172,7 @@
     <div class="wrapper">
       <div class="row">
         <nav class="col-2" style="display: flex; flex-direction: column;">
-          <a class="blue" href="/" style="margin-bottom: 1rem;"><i class="fas fa-dove"></i></a>
+          <a class="blue" href="/" style="margin-bottom: 1rem;"><i class="fas fa-horse"></i></a>
           <a href="/" style="margin-bottom: 1rem;"><i class="fas fa-home"></i></a>
           <a href="/notifications" style="margin-bottom: 1rem;"><i class="fas fa-bell"></i><span id="notificationsBadge"></span></a>
           <a href="/profile" style="margin-bottom: 1rem;"><i class="fas fa-user"></i></a>
