--- a/public/css/rules.css
+++ b/public/css/rules.css
@@ -20,30 +20,7 @@
   --danger: #dc3545;
   --light: #f8f9fa;
   --dark: #343a40;
-  /* Extra small devices (phones) */
-  @media only screen and (max-width: 575.98px) {
-    /* Your CSS rules for extra small devices here */
-  }
 
-  /* Small devices (tablets) */
-  @media only screen and (min-width: 576px) and (max-width: 767.98px) {
-    /* Your CSS rules for small devices here */
-  }
-
-  /* Medium devices (desktops, laptops) */
-  @media only screen and (min-width: 768px) and (max-width: 991.98px) {
-    /* Your CSS rules for medium devices here */
-  }
-
-  /* Large devices (large desktops, high-resolution laptops) */
-  @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
-    /* Your CSS rules for large devices here */
-  }
-
-  /* Extra large devices (larger desktops) */
-  @media only screen and (min-width: 1200px) {
-    /* Your CSS rules for extra large devices here */
-  }
 
   --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
@@ -62,7 +39,7 @@
 html, body {
   height: 100%;
   min-height: 100%;
-  background-color: #e97006;
+  background-color: #f29500;
   font-weight: 300;
 }
 
@@ -85,7 +62,7 @@ body {
     line-height: 1.5;
     color: #212529;
     text-align: left;
-    background-color: #e97006;
+    background-color: #f29500;
 }
 
 .row {
@@ -96,19 +73,22 @@ body {
 }
 
 .col-2 {
-  display: flex;
+  display: block;
   flex: 0 0 16.666667%;
   max-width: 16.666667%;
+  position:fixed;
+  top:0;
+  width:100%;
 }
 
-.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+.col, .col-1, .col-10, .col-11, .col-12, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
     position: relative;
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
 }
 
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+article, aside, figcaption, figure, nav, footer, header, hgroup, main,nav, section {
     display: block;
 }
 
@@ -191,9 +171,9 @@ input[type="file"] {
   text-align: center;
   text-decoration: none;
   white-space: nowrap;
-  background-color: #007bff;
+  background-color: var(--dark);
   border-radius: 4px;
-  color: #fff;
+  color: var(--orange);
   border: none;
   cursor: pointer;
 }
