--- a/views/home.html
+++ b/views/home.html
@@ -37,11 +37,11 @@
         userImageElement.innerHTML = htmlString2;
       }
     </script>
-    <div class="wrapper">
+    <section class="wrapper">
       <div class="row">
-        <nav class="col-2" style="width: 100%;display: flex; flex-direction: row;">
+        <nav class="col-2" style="width: 100%; display: flex; flex-direction: row; ">
         <ul>
-          <li><a class="blue" href="/" style="margin-bottom: 1rem;"><i class="fas fa-dove"></i></a></li>
+          <li><a class="goat" href="/" style="margin-bottom: 1rem;"><i class="fas fa-cow"></i></a></li>
           <li><a href="/" style="margin-bottom: 1rem;"><i class="fas fa-home"></i></a></li>
           <li><a href="/notifications" style="margin-bottom: 1rem;"><i class="fas fa-bell"></i><span id="notificationsBadge"></span></a></li>
           <li><a href="/profile" style="margin-bottom: 1rem;"><i class="fas fa-user"></i></a></li>
@@ -52,7 +52,7 @@
           <div id="titleContainer">
             <div class="headerButton"></div>
           </div>
-          <div class="content">
+          <section class="content">
             <div class="postFormContainer">
               <div class="userImageContainer" id="userImageContainer">
               </div>
@@ -111,11 +111,11 @@
                 </div>
               </div>
             </div>
-          </div>
+          </section>
         </div>
       </div>
       <div style="display:none; visibility:hidden;" class="col-md-2 col-lg-4"></div>
-    </div>
+    </section>
     </div>
     <div id="notificationList"> </div>
     <script src="https://kit.fontawesome.com/85404227e2.js" crossorigin="anonymous"></script>
