--- a/views/login.html
+++ b/views/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/login.css" />
   </head>
   <body>
-    <div class="wrapper">
+    <section class="wrapper">
       <div class="content">
         <div class="loginContainer">
           <h1>Login</h1>
@@ -18,7 +18,7 @@
           <a href="/register">Need an account? Register here.</a>
         </div>
       </div>
-    </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   </body>
