--- a/views/register.html
+++ b/views/register.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="/css/rules.css">
   <link rel="stylesheet" href="/css/login.css">
 </head>
-<div class="wrapper">
+<section class="wrapper">
   <div class="loginContainer">
     <h1>Register</h1>
     <form id="registerForm" method="post" onsubmit="event.preventDefault(); validateForm();">
@@ -27,6 +27,6 @@
         }
     }
   </script>
-</div>
+</section>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
