--- a/views/notificationsPage.html
+++ b/views/notificationsPage.html
@@ -46,11 +46,14 @@
     </script>
     <section class="wrapper">
       <div class="row">
-        <nav class="col-2" style="width: 100%; display: flex; flex-direction: row; ">
-          <a class="blue" href="/"><i class="fas fa-dove"></i></a><a href="/"><i class="fas fa-home"></i></a>
-          <a href="/notifications"><i class="fas fa-bell"></i><span id="notificationsBadge"></span></a>
-          <a href="/profile"><i class="fas fa-user"></i></a>
-          <a href="/logout"><i class="fas fa-sign-out-alt"></i></a>
+       <nav class="col-2" style="width: 100%; display: flex; flex-direction: row; ">
+        <ul>
+          <li><a class="goat" href="/" style="margin-bottom: 1rem;"><i class="fas fa-cow"></i></a></li>
+          <li><a href="/" style="margin-bottom: 1rem;"><i class="fas fa-home"></i></a></li>
+          <li><a href="/notifications" style="margin-bottom: 1rem;"><i class="fas fa-bell"></i><span id="notificationsBadge"></span></a></li>
+          <li><a href="/profile" style="margin-bottom: 1rem;"><i class="fas fa-user"></i></a></li>
+          <li><a href="/logout" style="margin-bottom: 1rem;"><i class="fas fa-sign-out-alt"></i></a></li>
+        </ul>
         </nav>
         <div class="mainSectionContainer col-10 col-md-8 col-lg-6">
           <div id="titleContainer">
